--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,17 +27,21 @@ dataclasses-json = "0.5.7"
 tiktoken = ">=0.0.4"
 tabulate = "0.9.0"
 python-dotenv = ">=0.21.0"
-langchain = ">=0.1.2"
+langchain = ">=0.3.0"
+langchain-core = ">=0.3.0"
 langchain_openai = "*"
 toml = ">=0.10.2"
 tomlkit = "^0.12.4"
 pyperclip = "^1.8.2"
-langchain-anthropic = "^0.1.1"
+langchain-anthropic = ">=0.3.0"
 regex = "^2023.12.25"
 pillow = "^10.2.0"
 datasets = "^2.17.1"
 black = "23.3.0"
-langchain-community = "^0.2.0"
+langchain-community = ">=0.3.0"
+langchain-google-genai = "^2.1.12"
+fastapi = {extras = ["all"], version = "^0.118.0"}
+uvicorn = "^0.37.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.3.1"
